<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    app:cardElevation="2dp"
    android:layout_width="match_parent"
    android:layout_marginTop="4dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="0dp"
        app:layout_anchorGravity="center_vertical">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="0"
            android:fontFamily="@font/oswald"
            android:text="12/12/2019"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvAmount"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/oswald"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:text="@string/groceries_root"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tvAmount"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/oswald_bold"
            android:text="24.20 BGN"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/iv_category_color"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/iv_category_color"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@color/colorPie" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_extra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/tvDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/oswald_bold"
                android:text="@string/item_name_underline"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/oswald_bold"
                android:text="@string/price_underline"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_extra_prices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/oswald_regular"
                android:text="1.10\n7.50\n1\25"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_extra_names" />

            <TextView
                android:id="@+id/tv_extra_names"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/oswald_regular"
                android:text="Bread\nOild\nSoap"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <ImageView
                android:id="@+id/iv_category_color2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@color/colorPie"
                tools:layout_editor_absoluteX="0dp" />

            <ImageView
                android:id="@+id/iv_category_color3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_extra_prices"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_extra_names"
                app:srcCompat="@color/colorPie" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_expense_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/oswald_regular"
            android:text="TextView"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tvDate"
            app:layout_constraintStart_toStartOf="@+id/tvDate" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
